--- a/frontend/hacknation/app/globals.css
+++ b/frontend/hacknation/app/globals.css
@@ -24,36 +24,49 @@
     --foreground: #000000;
   }
 }
-html,body{
-    height: 100vh;
-    width: 100vw;
-
+html, body, #__next {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
+
 body {
   background: #fefefe;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   /* background: radial-gradient(1q, #00923f 40px, transparent 0 )0 0/150px 150px, radial-gradient(1q, #00923f 40px, transparent 0 )75px 75px/150px 150px; */
+}
 
+.center{
+  position: fixed;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
 }
 .DashBoardTitle{
   width: 100%;
-  margin:100px auto;
   text-align: center;
   font-size: 60px;
   color: #00923f;
   font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
 }
 .RoleButtons{
   width: 100%;
-  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   gap:50px;
   color:white;
-    font-weight: 300;
+  font-weight: 300;
 
 }
 .DashboardButton:hover{
