--- a/frontend/hacknation/app/globals.css
+++ b/frontend/hacknation/app/globals.css
@@ -32,7 +32,7 @@ html, body, #__next {
 }
 
 body {
-  background: #fefefe;
+  background: #dedede;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   /* background: radial-gradient(1q, #00923f 40px, transparent 0 )0 0/150px 150px, radial-gradient(1q, #00923f 40px, transparent 0 )75px 75px/150px 150px; */
